@startuml
class Manager {
}

class ManagerPage {
  +searchExpenseInfo(query)
}

class ManagerExpenseController {
  +searchExpenseInfo(query)
}

class ExpenseService {
  +searchExpenseInfo(query)
}

class ExpenseRepository {
  +queryExpensesWithSearchCriteria(query)
}

class Database {
}

Manager --> ManagerPage : uses
ManagerPage --> ManagerExpenseController : interacts with
ManagerExpenseController --> ExpenseService : depends on
ExpenseService --> ExpenseRepository : depends on
ExpenseRepository --> Database : interacts with
@enduml
